add assertion case ".safetensors" extension

--- a/check.ipynb
+++ b/check.ipynb
@@ -92,11 +92,17 @@
   },
   {
    "cell_type": "markdown",
+   "id": "a41c2ba2",
+   "metadata": {},
+   "source": [
+    "# Things to do:\n"
+   ]
+  },
+  {
+   "cell_type": "markdown",
    "id": "7a0053d7",
    "metadata": {},
    "source": [
-    "## Things to do:\n",
-    "\n",
     "## Stage 0. We need to come up with some framework of the project and what exactly are we going to do\n",
     "\n",
     "## Stage 1. Set up a Transformer based segmentation model using ViT+LoRA\n",
@@ -132,12 +138,12 @@
    "id": "f76a7a17",
    "metadata": {},
    "source": [
-    "LoRA implementation"
+    "# LoRA implementation"
    ]
   },
   {
    "cell_type": "code",
-   "execution_count": 25,
+   "execution_count": 26,
    "id": "5031d8f2",
    "metadata": {},
    "outputs": [],
@@ -151,7 +157,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": null,
+   "execution_count": 27,
    "id": "46c95e46",
    "metadata": {},
    "outputs": [],
@@ -258,10 +264,12 @@
     "            nn.init.zeros_(B.weight)\n",
     "\n",
     "        \n",
-    "    def save_lora_params(self, filename:str):\n",
+    "    def save_lora_params(self, filename:str): \n",
     "        \"\"\" \n",
     "\n",
     "        \"\"\"\n",
+    "        assert filename.endswith(\".safetensors\"), \"File name is required to have .safetensors extensions\"\n",
+    "\n",
     "        # Create dict for safetensors, keys = str, values = tensors\n",
     "        state_dict = {}\n",
     "\n",
@@ -282,6 +290,8 @@
     "        \"\"\" \n",
     "        \n",
     "        \"\"\"\n",
+    "\n",
+    "        assert filename.endswith(\".safetensors\"),\"File name is required to have .safetensors extensions\"\n",
     "        loaded = load_file(filename)\n",
     "        # Load lora_layers first (convert to list)\n",
     "        loaded_layers = loaded['lora_layers'].tolist()\n",
@@ -326,7 +336,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": null,
+   "execution_count": 30,
    "id": "2a88e39a",
    "metadata": {},
    "outputs": [],
@@ -336,7 +346,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": null,
+   "execution_count": 31,
    "id": "70c77176",
    "metadata": {},
    "outputs": [],
