replace with model.encoder.layer and same changes in attn_proj_q/v --> attention.attention.query/value

--- a/check.ipynb
+++ b/check.ipynb
@@ -2,7 +2,7 @@
  "cells": [
   {
    "cell_type": "code",
-   "execution_count": 12,
+   "execution_count": 1,
    "id": "ca8e79f4",
    "metadata": {},
    "outputs": [],
@@ -15,7 +15,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 13,
+   "execution_count": 2,
    "id": "347a3e4d",
    "metadata": {},
    "outputs": [],
@@ -25,7 +25,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 14,
+   "execution_count": 3,
    "id": "551a5e23",
    "metadata": {},
    "outputs": [
@@ -49,7 +49,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 15,
+   "execution_count": 4,
    "id": "a7fa7b0a",
    "metadata": {},
    "outputs": [
@@ -69,7 +69,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 16,
+   "execution_count": 5,
    "id": "d759253a",
    "metadata": {},
    "outputs": [],
@@ -82,12 +82,61 @@
   },
   {
    "cell_type": "code",
-   "execution_count": null,
-   "id": "41a6670d",
+   "execution_count": 9,
+   "id": "7ec0fe51",
    "metadata": {},
-   "outputs": [],
+   "outputs": [
+    {
+     "data": {
+      "text/plain": [
+       "768"
+      ]
+     },
+     "execution_count": 9,
+     "metadata": {},
+     "output_type": "execute_result"
+    }
+   ],
    "source": [
-    "## I need to start working with the VIT model"
+    "model.encoder.layer[0].attention.attention.query.in_features\n"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 10,
+   "id": "cbef6a25",
+   "metadata": {},
+   "outputs": [
+    {
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "block_i.attention.attention.query: Linear(in_features=768, out_features=768, bias=True)\n",
+      "block_i.attention.attention.value: Linear(in_features=768, out_features=768, bias=True)\n"
+     ]
+    }
+   ],
+   "source": [
+    "for layer_i, block_i in enumerate(model.encoder.layer):\n",
+    "    print(\"block_i.attention.attention.query:\",block_i.attention.attention.query)\n",
+    "    print(\"block_i.attention.attention.value:\",block_i.attention.attention.value)\n",
+    "    break\n"
+   ]
+  },
+  {
+   "cell_type": "markdown",
+   "id": "3e8fcddc",
+   "metadata": {},
+   "source": [
+    "This is the architecture of the vit model\n",
+    "```\n",
+    "model.encoder.layer[0]\n",
+    "└── attention\n",
+    "    └── attention\n",
+    "        ├── query: nn.Linear\n",
+    "        ├── key:   nn.Linear\n",
+    "        └── value: nn.Linear\n",
+    "```"
    ]
   },
   {
@@ -193,8 +242,10 @@
    "source": [
     "## implement the LoRA VIT\n",
     "### ? Things to check ?\n",
-    "## ? vit_model.transformer.blocks\n",
-    "## ? vit_model.parameters()\n",
+    "## ? vit_model.transformer.blocks --> replaced with model.encoder.layer\n",
+    "## ? block.attn.proj_q/p ---> replace with block.attention.attention.query/value.\n",
+    "## ? vit_model.parameters() <--> Stays the same\n",
+    "\n",
     "class LoraVit(nn.Module):\n",
     "    \"\"\" \n",
     "    This class is to introduce LoRA layer to the model.\n",
@@ -213,10 +264,10 @@
     "            self.lora_layers = lora_layers\n",
     "        else: ## apply lora to all\n",
     "            ## ? here I need to see how will I check the number of transformer blocks\n",
-    "            self.lora_layers = list(range(len(vit_model.transformer.blocks)))\n",
+    "            self.lora_layers = list(range(len(vit_model.encoder.layer)))\n",
     "        \n",
-    "        dim = ... # Dimension of the input vector to the transformer\n",
-    "        # dim = vit_model.transformer.blocks[0].attn.proj_q.in_features\n",
+    "        # Dimension of the input vector to the transformer\n",
+    "        dim = vit_model.encoder.layer[0].attention.attention.query.in_features \n",
     "        \n",
     "        # freeze the parameters\n",
     "        ## ? How can we invoke paramters in the vit_model\n",
@@ -228,11 +279,11 @@
     "        self.list_v_As, self.list_v_Bs = [], []\n",
     "\n",
     "        # replace the normal q and V with LoRA layers\n",
-    "        for layer_i, block_i in enumerate(vit_model.transformer.blocks):\n",
+    "        for layer_i, block_i in enumerate(vit_model.encoder.layer):\n",
     "            if layer_i not in self.lora_layers:\n",
     "                continue # (next iteration)\n",
-    "            w_q_linear = block_i.attn.proj_q\n",
-    "            w_v_linear = block_i.attn.proj_v\n",
+    "            w_q_linear = block_i.attention.attention.query\n",
+    "            w_v_linear = block_i.attention.attention.value\n",
     "            # Q and V layers' weights\n",
     "\n",
     "            ## do I need to initialise weights here? or should I do it after this loop?\n",
@@ -291,7 +342,7 @@
     "        \n",
     "        \"\"\"\n",
     "\n",
-    "        assert filename.endswith(\".safetensors\"),\"File name is required to have .safetensors extensions\"\n",
+    "        assert filename.endswith(\".safetensors\"), \"File name is required to have .safetensors extensions\"\n",
     "        loaded = load_file(filename)\n",
     "        # Load lora_layers first (convert to list)\n",
     "        loaded_layers = loaded['lora_layers'].tolist()\n",
@@ -299,6 +350,7 @@
     "        # If current self.lora_layers differs, you might want to reset or warn\n",
     "        if loaded_layers != self.lora_layers:\n",
     "            print(\"Warning: loaded lora_layers differ from current model's layers. Adjusting...\")\n",
+    "            ## maybe here I need to add assertion error so that there is not any major mistake later on\n",
     "            self.lora_layers = loaded_layers\n",
     "            # Optionally: re-initialize LoRA modules for these layers here\n",
     "\n",
