add loss functions

--- a/check.ipynb
+++ b/check.ipynb
@@ -49,7 +49,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 4,
+   "execution_count": 12,
    "id": "a7fa7b0a",
    "metadata": {},
    "outputs": [
@@ -385,6 +385,285 @@
     "class SerialLoraVit():\n",
     "    pass"
    ]
+  },
+  {
+   "cell_type": "markdown",
+   "id": "e5c7fb4f",
+   "metadata": {},
+   "source": [
+    "### TO do:\n",
+    "\n",
+    "1. ~~create a class for the segmentation task (or maybe look into some pre-defined architecture, maybe we might just need to use a simple mlp based architecture?):~~ \n",
+    "2. ~~Look into the loss functions one can use for the task here.~~"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 13,
+   "id": "475c984d",
+   "metadata": {},
+   "outputs": [],
+   "source": [
+    "import torch.nn.functional as F"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": null,
+   "id": "bce67fc0",
+   "metadata": {},
+   "outputs": [],
+   "source": [
+    "class CustomSegHead(nn.Module):\n",
+    "    \"\"\" \n",
+    "    Custom defined segmentation head. This module takes the patch embeddings from a ViT backbone and\n",
+    "    processes them into a full-resolution segmentation map\n",
+    "\n",
+    "    Arguments:\n",
+    "    ----------\n",
+    "    hidden_dim : The dimension of the patch embeddings from the ViT (e.g., 768 for ViT-Base).\n",
+    "        \n",
+    "    num_classes : The number of output segmentation classes (e.g., 21 for PASCAL VOC, 10 for pets dataset).\n",
+    "        \n",
+    "    patch_size : The size of each image patch in pixels (e.g., 16 for 16x16 patches). This also determines how much to upsample the output feature map.\n",
+    "\n",
+    "    image_size : The height/width of the input image in pixels (assumes square images). Used to calculate how many patches per spatial dimension.\n",
+    "    \"\"\"\n",
+    "    def __init__(self, hidden_dim:int, num_classes:int, patch_size:int, image_size:int):\n",
+    "        super().__init__()\n",
+    "        \n",
+    "        # Store the patch size (e.g., 16 for 16x16 patches)\n",
+    "        self.patch_size = patch_size\n",
+    "        \n",
+    "        # Calculate the number of patches per spatial dimension (assuming square image and patches)\n",
+    "        self.num_patch_per_dim = image_size // patch_size\n",
+    "\n",
+    "        # First conv layer: reduces channels from hidden_dim to half, with 3x3 kernel for local spatial context\n",
+    "        self.conv1 = nn.Conv2d(hidden_dim, hidden_dim // 2, kernel_size=3, padding=1)\n",
+    "        \n",
+    "        # ReLU activation after conv1 for non-linearity\n",
+    "        self.relu = nn.ReLU()\n",
+    "        \n",
+    "        # Final conv layer: maps features to the number of classes with 1x1 convolution (pixel-wise classification)\n",
+    "        self.conv2 = nn.Conv2d(hidden_dim // 2, num_classes, kernel_size=1)\n",
+    "\n",
+    "    def forward(self, x):  # x shape: (B, N, D)\n",
+    "        \"\"\"\n",
+    "        Input x's shape: (B,N,D)\n",
+    "        where B= Extract batch size, N= number of patches, and D= embedding dimension.\n",
+    "        \"\"\"\n",
+    "        # Extract batch size (B), number of patches (N), and embedding dimension (D)\n",
+    "        B, N, D = x.shape \n",
+    "        \n",
+    "        # Calculate height and width of patch grid (assume square grid)\n",
+    "        H = W = self.num_patch_per_dim\n",
+    "        # Note: N= HXW\n",
+    "        \n",
+    "        # current shape is : (B,N,D)\n",
+    "        # Rearrange tensor to (B, D, H, W) so it can be processed by Conv2d layers\n",
+    "        # 1- permute swaps the dimensions so channels come before spatial dims\n",
+    "            # -- Swaps dimensions 1 and 2 -> new shape is: (B,D,N) \n",
+    "        # 2- reshape organizes tokens into 2D spatial layout: (B,D,N)--> (B,D,H,W)\n",
+    "        x = x.permute(0, 2, 1).reshape(B, D, H, W)\n",
+    "        \n",
+    "        # Apply first convolution and ReLU activation to learn local spatial features\n",
+    "        x = self.relu(self.conv1(x))\n",
+    "        \n",
+    "        # Apply final 1x1 convolution to produce per-class scores for each spatial location\n",
+    "        x = self.conv2(x)\n",
+    "        \n",
+    "        # Upsample output to match original image resolution\n",
+    "        # scale_factor = patch size because each patch corresponds to patch_size x patch_size pixels\n",
+    "        x = F.interpolate(x, scale_factor=self.patch_size, mode='bilinear', align_corners=False)\n",
+    "        \n",
+    "        # Return segmentation logits of shape (B, num_classes, H_img, W_img)\n",
+    "        return x\n"
+   ]
+  },
+  {
+   "cell_type": "markdown",
+   "id": "f9097c40",
+   "metadata": {},
+   "source": [
+    "define a vit-seg model: (club together vit-model-feature-extraction with Custom Seg Head)"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": null,
+   "id": "00d63f4f",
+   "metadata": {},
+   "outputs": [],
+   "source": [
+    "# add the line below while creating a new file:\n",
+    "#   -from custom_seg_head import CustomSegHead  # Ensure this path is correct\n",
+    "\n",
+    "class SegViT(nn.Module):\n",
+    "    \"\"\"\n",
+    "    Wraps a ViT model and applies a custom segmentation head to the output.\n",
+    "    Converts patch embeddings into full-resolution segmentation masks.\n",
+    "    \"\"\"\n",
+    "\n",
+    "    def __init__(self,vit_model: nn.Module,\n",
+    "                    image_size: int,\n",
+    "                    patch_size: int,\n",
+    "                    dim: int,\n",
+    "                    n_classes: int,\n",
+    "                    ) -> None:\n",
+    "        super().__init__()\n",
+    "        \n",
+    "        self.vit = vit_model\n",
+    "\n",
+    "        # Remove classification head if present\n",
+    "        if hasattr(self.vit, \"fc\"):\n",
+    "            del self.vit.fc\n",
+    "        elif hasattr(self.vit, \"lora_vit\") and hasattr(self.vit.lora_vit, \"fc\"):\n",
+    "            del self.vit.lora_vit.fc\n",
+    "\n",
+    "        # Use custom segmentation head\n",
+    "        self.seg_head = CustomSegHead(\n",
+    "            hidden_dim=dim,\n",
+    "            num_classes=n_classes,\n",
+    "            patch_size=patch_size,\n",
+    "            image_size=image_size\n",
+    "        )\n",
+    "\n",
+    "    def forward(self, x):\n",
+    "        \"\"\"\n",
+    "        Forward pass:\n",
+    "        1. Get ViT patch embeddings (B, N+1, D)\n",
+    "        2. Remove class token (CLS) → (B, N, D)\n",
+    "        3. Feed to custom segmentation head\n",
+    "        \"\"\"\n",
+    "        x = self.vit(x)  # (B, N+1, D)\n",
+    "        x = x[:, :-1, :]  # Remove CLS token → (B, N, D)\n",
+    "        x = self.seg_head(x)  # (B, num_classes, H, W)\n",
+    "        # \n",
+    "        return x"
+   ]
+  },
+  {
+   "cell_type": "markdown",
+   "id": "9866d98a",
+   "metadata": {},
+   "source": [
+    "task for today (31-july-2025):\n",
+    "1. Check whether the models are working as intended before training.\n",
+    "2. ~~Define the loss functions.~~\n",
+    "\n",
+    "    * ~~Cross entropy loss and weighted CE loss (-log loss).~~\n",
+    "        * `nn.CrossEntropyLoss`\n",
+    "        * In pytorch, input should be unnormalised logits.\n",
+    "\n",
+    "    * ~~Dice loss.~~ \n",
+    "    * ~~Log-Cosh Dice loss (finite and continuous gradients):~~\n",
+    "        2.3.1 Original paper: https://arxiv.org/pdf/2006.14822\n",
+    "        2.3.2 Review paper on loss: https://arxiv.org/html/2312.05391v1/#S3\n",
+    "3. Define the trainer class. \n",
+    "4. test whether the code is working as intended for training."
+   ]
+  },
+  {
+   "cell_type": "markdown",
+   "id": "7f308992",
+   "metadata": {},
+   "source": [
+    "Defining the loss functions for image segmentation tasks\n",
+    "\n",
+    "1. Done\n",
+    "2. need to so some checks in the code below to confirm my implementation is indeed correct. "
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": null,
+   "id": "2a7ebfd4",
+   "metadata": {},
+   "outputs": [],
+   "source": [
+    "import torch\n",
+    "import torch.nn.functional as F"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": null,
+   "id": "34f3c7c6",
+   "metadata": {},
+   "outputs": [],
+   "source": [
+    "def cross_entropy():\n",
+    "    pass\n",
+    "\n",
+    "def dice_loss(logits, targets, num_classes, epsilon=1e-6):\n",
+    "    \"\"\"\n",
+    "    Computes multi-class Dice loss.\n",
+    "\n",
+    "    Args:\n",
+    "        logits: Tensor of shape (N, C, H, W) — raw model outputs\n",
+    "        targets: Tensor of shape (N, H, W) — ground truth class indices\n",
+    "        num_classes: int — number of classes\n",
+    "        epsilon: float — smoothing factor to avoid division by zero\n",
+    "\n",
+    "    Returns:\n",
+    "        Scalar Dice loss\n",
+    "    \"\"\"\n",
+    "    # Convert targets to one-hot encoding\n",
+    "    targets_one_hot = F.one_hot(targets, num_classes).permute(0, 3, 1, 2).float()  # (N, C, H, W)\n",
+    "\n",
+    "    # Apply softmax to logits \n",
+    "    probs = F.softmax(logits, dim=1)  # (N, C, H, W)\n",
+    "\n",
+    "    # Calculate per-class Dice score\n",
+    "    ### ?? Check whether this work as intended or not ??\n",
+    "    dims = (0, 2, 3)  # sum over batch, height, width\n",
+    "    intersection = torch.sum(probs * targets_one_hot, dims)\n",
+    "    cardinality = torch.sum(probs + targets_one_hot, dims)\n",
+    "\n",
+    "    dice_per_class = (2. * intersection + epsilon) / (cardinality + epsilon)\n",
+    "    \n",
+    "    #?? I need to test this mean because I am not sure whether the dimension wise it is correct or not ??\n",
+    "    # Handling binary vs multi-class\n",
+    "    if num_classes == 2:\n",
+    "        dice_loss_value = 1. - dice_per_class[1]  # Only use foreground class\n",
+    "    else:\n",
+    "        dice_loss_value = 1. - dice_per_class.mean()  # Average over all classes\n",
+    "        \n",
+    "    return dice_loss_value\n",
+    "\n",
+    "\n",
+    "def log_cosh_dice_loss(logits, targets, num_classes, epsilon=1e-6):\n",
+    "    \"\"\"\n",
+    "    Computes log-cosh of the multi-class Dice loss.\n",
+    "\n",
+    "    Args:\n",
+    "        logits: Tensor of shape (N, C, H, W)\n",
+    "        targets: Tensor of shape (N, H, W)\n",
+    "        num_classes: int\n",
+    "        epsilon: float\n",
+    "\n",
+    "    Returns:\n",
+    "        Scalar log-cosh Dice loss\n",
+    "    \"\"\"\n",
+    "    dice = dice_loss(logits, targets, num_classes, epsilon)\n",
+    "    return torch.log(torch.cosh(dice))\n"
+   ]
+  },
+  {
+   "cell_type": "markdown",
+   "id": "bc0a75fd",
+   "metadata": {},
+   "source": [
+    "Download the relevant dataset."
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": null,
+   "id": "0be4161a",
+   "metadata": {},
+   "outputs": [],
+   "source": []
   },
   {
    "cell_type": "code",
