some minor change in markdown i guess

--- a/check.ipynb
+++ b/check.ipynb
@@ -548,6 +548,7 @@
    "metadata": {},
    "source": [
     "task for today (31-july-2025):\n",
+    "0. Investigate the dataset\n",
     "1. Check whether the models are working as intended before training.\n",
     "2. ~~Define the loss functions.~~\n",
     "\n",
@@ -557,8 +558,8 @@
     "\n",
     "    * ~~Dice loss.~~ \n",
     "    * ~~Log-Cosh Dice loss (finite and continuous gradients):~~\n",
-    "        2.3.1 Original paper: https://arxiv.org/pdf/2006.14822\n",
-    "        2.3.2 Review paper on loss: https://arxiv.org/html/2312.05391v1/#S3\n",
+    "        * Original paper: https://arxiv.org/pdf/2006.14822\n",
+    "        * Review paper on loss: https://arxiv.org/html/2312.05391v1/#S3\n",
     "3. Define the trainer class. \n",
     "4. test whether the code is working as intended for training."
    ]
