minor fix in SegViT wrapper

--- a/check.ipynb
+++ b/check.ipynb
@@ -2,7 +2,7 @@
  "cells": [
   {
    "cell_type": "code",
-   "execution_count": 1,
+   "execution_count": 11,
    "id": "ca8e79f4",
    "metadata": {},
    "outputs": [],
@@ -15,7 +15,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 2,
+   "execution_count": 12,
    "id": "347a3e4d",
    "metadata": {},
    "outputs": [],
@@ -25,7 +25,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 3,
+   "execution_count": 13,
    "id": "551a5e23",
    "metadata": {},
    "outputs": [
@@ -49,7 +49,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 12,
+   "execution_count": 14,
    "id": "a7fa7b0a",
    "metadata": {},
    "outputs": [
@@ -69,7 +69,67 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 5,
+   "execution_count": 15,
+   "id": "2a89a5af",
+   "metadata": {},
+   "outputs": [
+    {
+     "data": {
+      "text/plain": [
+       "ViTModel(\n",
+       "  (embeddings): ViTEmbeddings(\n",
+       "    (patch_embeddings): ViTPatchEmbeddings(\n",
+       "      (projection): Conv2d(3, 768, kernel_size=(16, 16), stride=(16, 16))\n",
+       "    )\n",
+       "    (dropout): Dropout(p=0.0, inplace=False)\n",
+       "  )\n",
+       "  (encoder): ViTEncoder(\n",
+       "    (layer): ModuleList(\n",
+       "      (0-11): 12 x ViTLayer(\n",
+       "        (attention): ViTAttention(\n",
+       "          (attention): ViTSelfAttention(\n",
+       "            (query): Linear(in_features=768, out_features=768, bias=True)\n",
+       "            (key): Linear(in_features=768, out_features=768, bias=True)\n",
+       "            (value): Linear(in_features=768, out_features=768, bias=True)\n",
+       "          )\n",
+       "          (output): ViTSelfOutput(\n",
+       "            (dense): Linear(in_features=768, out_features=768, bias=True)\n",
+       "            (dropout): Dropout(p=0.0, inplace=False)\n",
+       "          )\n",
+       "        )\n",
+       "        (intermediate): ViTIntermediate(\n",
+       "          (dense): Linear(in_features=768, out_features=3072, bias=True)\n",
+       "          (intermediate_act_fn): GELUActivation()\n",
+       "        )\n",
+       "        (output): ViTOutput(\n",
+       "          (dense): Linear(in_features=3072, out_features=768, bias=True)\n",
+       "          (dropout): Dropout(p=0.0, inplace=False)\n",
+       "        )\n",
+       "        (layernorm_before): LayerNorm((768,), eps=1e-12, elementwise_affine=True)\n",
+       "        (layernorm_after): LayerNorm((768,), eps=1e-12, elementwise_affine=True)\n",
+       "      )\n",
+       "    )\n",
+       "  )\n",
+       "  (layernorm): LayerNorm((768,), eps=1e-12, elementwise_affine=True)\n",
+       "  (pooler): ViTPooler(\n",
+       "    (dense): Linear(in_features=768, out_features=768, bias=True)\n",
+       "    (activation): Tanh()\n",
+       "  )\n",
+       ")"
+      ]
+     },
+     "execution_count": 15,
+     "metadata": {},
+     "output_type": "execute_result"
+    }
+   ],
+   "source": [
+    "model"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 16,
    "id": "d759253a",
    "metadata": {},
    "outputs": [],
@@ -82,7 +142,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 9,
+   "execution_count": 17,
    "id": "7ec0fe51",
    "metadata": {},
    "outputs": [
@@ -92,7 +152,7 @@
        "768"
       ]
      },
-     "execution_count": 9,
+     "execution_count": 17,
      "metadata": {},
      "output_type": "execute_result"
     }
@@ -103,7 +163,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 10,
+   "execution_count": 18,
    "id": "cbef6a25",
    "metadata": {},
    "outputs": [
@@ -192,7 +252,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 26,
+   "execution_count": 19,
    "id": "5031d8f2",
    "metadata": {},
    "outputs": [],
@@ -206,7 +266,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 27,
+   "execution_count": 20,
    "id": "46c95e46",
    "metadata": {},
    "outputs": [],
@@ -235,7 +295,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": null,
+   "execution_count": 21,
    "id": "150ae4a3",
    "metadata": {},
    "outputs": [],
@@ -268,6 +328,7 @@
     "        \n",
     "        # Dimension of the input vector to the transformer\n",
     "        dim = vit_model.encoder.layer[0].attention.attention.query.in_features \n",
+    "        print(f\"dim is: {dim}\")\n",
     "        \n",
     "        # freeze the parameters\n",
     "        ## ? How can we invoke paramters in the vit_model\n",
@@ -297,11 +358,13 @@
     "            self.list_v_As.append(a_linear_v); self.list_v_Bs.append(b_linear_v) \n",
     "\n",
     "            # replace with LoRA layer\n",
-    "            block_i.attn.proj_q = LoraLayer(w_q_linear, a_linear_q, b_linear_q, r, alpha)\n",
-    "            block_i.attn.proj_v = LoraLayer(w_v_linear, a_linear_v, b_linear_v, r, alpha)\n",
+    "            # block_i.attn.proj_q = LoraLayer(w_q_linear, a_linear_q, b_linear_q, r, alpha)\n",
+    "            block_i.attention.attention.query = LoraLayer(w_q_linear, a_linear_q, b_linear_q, r, alpha)\n",
+    "            # block_i.attn.proj_v = LoraLayer(w_v_linear, a_linear_v, b_linear_v, r, alpha)\n",
+    "            block_i.attention.attention.value =  LoraLayer(w_v_linear, a_linear_v, b_linear_v, r, alpha)\n",
     "\n",
     "        self.init_lora_layers()# initialise the lora parameters\n",
-    "        self.vit_lora = vit_model\n",
+    "        self.model_vit_lora = vit_model\n",
     "\n",
     "    def init_lora_layers(self) -> None:\n",
     "        \"\"\"\n",
@@ -364,16 +427,16 @@
     "        print(f\"Loaded LoRA params and layers from {filename}\")\n",
     "\n",
     "\n",
-    "    def forward(self, x:Tensor) -> Tensor:\n",
+    "    def forward(self, x:Tensor, **kwargs) -> Tensor:\n",
     "        \"\"\" \n",
     "        run the LoRA vit\n",
     "        \"\"\"\n",
-    "        return self.vit_lora(x)"
+    "        return self.model_vit_lora(x, **kwargs)"
    ]
   },
   {
    "cell_type": "code",
-   "execution_count": null,
+   "execution_count": 22,
    "id": "f8ee88bf",
    "metadata": {},
    "outputs": [],
@@ -399,7 +462,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 13,
+   "execution_count": 23,
    "id": "475c984d",
    "metadata": {},
    "outputs": [],
@@ -409,7 +472,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": null,
+   "execution_count": 24,
    "id": "bce67fc0",
    "metadata": {},
    "outputs": [],
@@ -465,16 +528,20 @@
     "            # -- Swaps dimensions 1 and 2 -> new shape is: (B,D,N) \n",
     "        # 2- reshape organizes tokens into 2D spatial layout: (B,D,N)--> (B,D,H,W)\n",
     "        x = x.permute(0, 2, 1).reshape(B, D, H, W)\n",
+    "        print(f\"shape after permutation and rehaping: {x.shape}\")\n",
     "        \n",
     "        # Apply first convolution and ReLU activation to learn local spatial features\n",
     "        x = self.relu(self.conv1(x))\n",
+    "        print(f\"shape after first convolution: {x.shape}\")\n",
     "        \n",
     "        # Apply final 1x1 convolution to produce per-class scores for each spatial location\n",
     "        x = self.conv2(x)\n",
+    "        print(f\"shape after second convolution: {x.shape}\")\n",
     "        \n",
     "        # Upsample output to match original image resolution\n",
     "        # scale_factor = patch size because each patch corresponds to patch_size x patch_size pixels\n",
     "        x = F.interpolate(x, scale_factor=self.patch_size, mode='bilinear', align_corners=False)\n",
+    "        print(f\"shape after interpolation: {x.shape}\")\n",
     "        \n",
     "        # Return segmentation logits of shape (B, num_classes, H_img, W_img)\n",
     "        return x\n"
@@ -490,13 +557,17 @@
   },
   {
    "cell_type": "code",
-   "execution_count": null,
+   "execution_count": 35,
    "id": "00d63f4f",
    "metadata": {},
    "outputs": [],
    "source": [
     "# add the line below while creating a new file:\n",
     "#   -from custom_seg_head import CustomSegHead  # Ensure this path is correct\n",
+    "\n",
+    "## ?? Questions for me: \n",
+    "## 1. Understand this part of the code: Remove classification head if present\n",
+    "## 2. Remove CLS token → (B, N, D): (CHECKED)yes we need to do this:\n",
     "\n",
     "class SegViT(nn.Module):\n",
     "    \"\"\"\n",
@@ -527,17 +598,29 @@
     "            patch_size=patch_size,\n",
     "            image_size=image_size\n",
     "        )\n",
-    "\n",
-    "    def forward(self, x):\n",
+    "    # note for me: maybe have an argument stating whether wanna remove the extra class token or not (if it is already removed)\n",
+    "    def forward(self, x): # shape of x: (B,N+1,D)\n",
     "        \"\"\"\n",
     "        Forward pass:\n",
     "        1. Get ViT patch embeddings (B, N+1, D)\n",
     "        2. Remove class token (CLS) → (B, N, D)\n",
     "        3. Feed to custom segmentation head\n",
     "        \"\"\"\n",
+    "\n",
+    "        print(f\"[Input] shape: {x.shape}, type: {type(x)}\")\n",
     "        x = self.vit(x)  # (B, N+1, D)\n",
-    "        x = x[:, :-1, :]  # Remove CLS token → (B, N, D)\n",
+    "        print(f\"[After vit(x)] type: {type(x)}\")\n",
+    "\n",
+    "        # get the last state\n",
+    "        x= x.last_hidden_state # (B,N+1,D)\n",
+    "        print(f\"[After .last_hidden_state] shape: {x.shape}, type: {type(x)}\")\n",
+    "\n",
+    "        #x = x[:, :-1, :]  # Remove CLS token → (B, N, D)\n",
+    "        # I think it should be this:\n",
+    "        x = x[:,1:,:] # because it is the first token which is\n",
+    "        print(f\"x.shape after removing the CLS: {x.shape}\")\n",
     "        x = self.seg_head(x)  # (B, num_classes, H, W)\n",
+    "        print(f\"x.shape after segmentation head: {x.shape}\")\n",
     "        # \n",
     "        return x"
    ]
@@ -548,8 +631,9 @@
    "metadata": {},
    "source": [
     "task for today (31-july-2025):\n",
+    "\n",
     "0. Investigate the dataset\n",
-    "1. Check whether the models are working as intended before training.\n",
+    "1. ~~Check whether the models are working as intended before training.~~\n",
     "2. ~~Define the loss functions.~~\n",
     "\n",
     "    * ~~Cross entropy loss and weighted CE loss (-log loss).~~\n",
@@ -572,23 +656,23 @@
     "Defining the loss functions for image segmentation tasks\n",
     "\n",
     "1. Done\n",
-    "2. need to so some checks in the code below to confirm my implementation is indeed correct. "
+    "2. need to do some checks in the code below to confirm my implementation is indeed correct. "
    ]
   },
   {
    "cell_type": "code",
-   "execution_count": null,
+   "execution_count": 26,
    "id": "2a7ebfd4",
    "metadata": {},
    "outputs": [],
    "source": [
-    "import torch\n",
+    "# import torch\n",
     "import torch.nn.functional as F"
    ]
   },
   {
    "cell_type": "code",
-   "execution_count": null,
+   "execution_count": 27,
    "id": "34f3c7c6",
    "metadata": {},
    "outputs": [],
@@ -648,6 +732,160 @@
     "    \"\"\"\n",
     "    dice = dice_loss(logits, targets, num_classes, epsilon)\n",
     "    return torch.log(torch.cosh(dice))\n"
+   ]
+  },
+  {
+   "cell_type": "markdown",
+   "id": "0ab83e8f",
+   "metadata": {},
+   "source": [
+    "### checking the model code before training\n",
+    "\n",
+    "1. ~~Lora_Vit class:~~\n",
+    "2. ~~Custom segmentation head~~\n",
+    "3. SegViT model (I havent checked it fully yet. Need to do that)"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 28,
+   "id": "40434355",
+   "metadata": {},
+   "outputs": [
+    {
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "dim is: 768\n"
+     ]
+    }
+   ],
+   "source": [
+    "## checking implementation of LoraVIT class\n",
+    "check_loravit = LoraVit(vit_model=model, r=4, alpha = 16, lora_layers=[0,1,3])"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": null,
+   "id": "89ac0c9f",
+   "metadata": {},
+   "outputs": [],
+   "source": [
+    "# 2 does not have lora params whereas 3 has:\n",
+    "# check_loravit.model_vit_lora.encoder.layer[2], check_loravit.model_vit_lora.encoder.layer[3]"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": null,
+   "id": "635a13e9",
+   "metadata": {},
+   "outputs": [],
+   "source": [
+    "# print(check_loravit.model_vit_lora)\n",
+    "# note that right now the patch size is 16x16 (since kernel size is 16)\n",
+    "# your image size needs to be the multiple of 16"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": null,
+   "id": "4f8cc9f5",
+   "metadata": {},
+   "outputs": [
+    {
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "printing the output:\n",
+      "['__annotations__', '__class__', '__class_getitem__', '__contains__', '__dataclass_fields__', '__dataclass_params__', '__delattr__', '__delitem__', '__dict__', '__dir__', '__doc__', '__eq__', '__format__', '__ge__', '__getattribute__', '__getitem__', '__getstate__', '__gt__', '__hash__', '__init__', '__init_subclass__', '__ior__', '__iter__', '__le__', '__len__', '__lt__', '__match_args__', '__module__', '__ne__', '__new__', '__or__', '__post_init__', '__reduce__', '__reduce_ex__', '__repr__', '__reversed__', '__ror__', '__setattr__', '__setitem__', '__sizeof__', '__str__', '__subclasshook__', 'attentions', 'clear', 'copy', 'fromkeys', 'get', 'hidden_states', 'items', 'keys', 'last_hidden_state', 'move_to_end', 'pooler_output', 'pop', 'popitem', 'setdefault', 'to_tuple', 'update', 'values']\n",
+      "odict_keys(['last_hidden_state', 'pooler_output', 'hidden_states', 'attentions'])\n",
+      "torch.Size([1, 197, 768]) torch.Size([1, 768])\n"
+     ]
+    }
+   ],
+   "source": [
+    "x = torch.randn(1, 3, 224, 224)\n",
+    "with torch.no_grad():\n",
+    "    output=check_loravit(x,output_hidden_states=True, output_attentions=True)\n",
+    "print(\"printing the output:\");print(dir(output))\n",
+    "print(output.keys())# this one is better\n",
+    "print(output.last_hidden_state.shape, output.pooler_output.shape)\n",
+    "# note: the output.last_hidden_state.shape is [1,197,768] and not [1,196,768] implying that the output also contains the ClS token. "
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": null,
+   "id": "498cc773",
+   "metadata": {},
+   "outputs": [],
+   "source": [
+    "#output.hidden_states, output.attentions ## output of each transformer block, attention weights inside each attention layer"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 38,
+   "id": "0da11185",
+   "metadata": {},
+   "outputs": [
+    {
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "shape after permutation and rehaping: torch.Size([25, 768, 14, 14])\n",
+      "shape after first convolution: torch.Size([25, 384, 14, 14])\n",
+      "shape after second convolution: torch.Size([25, 37, 14, 14])\n",
+      "shape after interpolation: torch.Size([25, 37, 224, 224])\n"
+     ]
+    }
+   ],
+   "source": [
+    "## checking custom segmentation head\n",
+    "check_seg_head_model = CustomSegHead(hidden_dim=768, num_classes=37, patch_size=16, image_size=224)\n",
+    "x=torch.randn(25,196,768) # I was getting error when I had 197 instead of 196\n",
+    "with torch.no_grad():\n",
+    "    output = check_seg_head_model(x)"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 39,
+   "id": "6b811720",
+   "metadata": {},
+   "outputs": [
+    {
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "[Input] shape: torch.Size([25, 3, 224, 224]), type: <class 'torch.Tensor'>\n",
+      "[After vit(x)] type: <class 'transformers.modeling_outputs.BaseModelOutputWithPooling'>\n",
+      "[After .last_hidden_state] shape: torch.Size([25, 197, 768]), type: <class 'torch.Tensor'>\n",
+      "x.shape after removing the CLS: torch.Size([25, 196, 768])\n",
+      "shape after permutation and rehaping: torch.Size([25, 768, 14, 14])\n",
+      "shape after first convolution: torch.Size([25, 384, 14, 14])\n",
+      "shape after second convolution: torch.Size([25, 3, 14, 14])\n",
+      "shape after interpolation: torch.Size([25, 3, 224, 224])\n",
+      "x.shape after segmentation head: torch.Size([25, 3, 224, 224])\n"
+     ]
+    }
+   ],
+   "source": [
+    "## checking the vit_based_segmentation model\n",
+    "x=torch.randn(25,3,224,224)\n",
+    "vit_seg_wrapper = SegViT(vit_model=model,image_size=224, patch_size=16, dim=768, n_classes=3)\n",
+    "with torch.no_grad():\n",
+    "    output =  vit_seg_wrapper(x)"
+   ]
+  },
+  {
+   "cell_type": "markdown",
+   "id": "5249aee8",
+   "metadata": {},
+   "source": [
+    "verdict:  fixed the minor issue in the segmentation wrapper class and it seems to be working fine :)."
    ]
   },
   {
